<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="split">Split</string>
    <string name="tip">Tip %</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="currency_sign">$</string>
    <string name="increase_tip">Increase Tip</string>
    <string name="decrease_tip">Decrease Tip</string>
    <string name="add_people">Add People</string>
    <string name="remove_people">Remove People</string>
    <string name="zero_dollars">$0.00</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="bill_total">Bill Total</string>
    <string name="round_up">Round Up</string>
    <string name="round_down">Round Down</string>
    <string name="each_person_pays">Each Person Pays</string>
    <string name="currency_format">$%.2f</string>
    <string name="currency_format_input">%.2f</string>
    <string name="number_of_people">Split</string>
    <string name="tip_percent">Tip</string>
    <string name="amount">Amount</string>
    <string name="_0.00">0.00</string>
    <string name="_1">1</string>
    <string name="_15.00">15.00</string>
    <string name="eighteen_percent">18%</string>
</resources>