<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/center2"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </View>

            <TextView
                style="@style/AppTheme.TextView"
                android:labelFor="@+id/bill_amount"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/bill_amount"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintBottom_toBottomOf="@+id/bill_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bill_amount" />

            <EditText
                android:id="@+id/bill_amount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:hint="@string/amount"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="@+id/tip_percent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AppTheme.TextView"
                android:labelFor="@+id/split"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/split"

                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintBottom_toBottomOf="@+id/split"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/split" />

            <EditText
                android:hint="@string/number_of_people"
                android:id="@+id/split"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:typeface="monospace"
                android:text="@string/_1"
                app:layout_constraintEnd_toEndOf="@+id/tip_percent"
                app:layout_constraintTop_toBottomOf="@+id/bill_amount" />

            <TextView
                style="@style/AppTheme.TextView"
                android:labelFor="@+id/tip_percent"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"

                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintBottom_toBottomOf="@+id/tip_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tip_percent" />

            <EditText
                android:hint="@string/tip_percent"
                android:id="@+id/tip_percent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:ems="10"
                android:gravity="end"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:typeface="monospace"
                app:layout_constraintEnd_toStartOf="@+id/tip_add"
                app:layout_constraintTop_toBottomOf="@+id/split"
                android:text="@string/_15.00"
                android:importantForAutofill="no" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/tip_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ten_percent"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tip_percent" />

            <Button
                android:id="@+id/tip_18"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eighteen_percent"
                android:typeface="normal"
                app:layout_constraintEnd_toStartOf="@+id/tip_20"
                app:layout_constraintStart_toEndOf="@+id/center2"
                app:layout_constraintTop_toTopOf="@+id/tip_10" />

            <Button
                android:id="@+id/tip_15"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteen_percent"
                android:typeface="normal"
                app:layout_constraintEnd_toStartOf="@+id/center2"
                app:layout_constraintStart_toEndOf="@+id/tip_10"
                app:layout_constraintTop_toTopOf="@+id/tip_10" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/tip_20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/twenty_percent"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tip_10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_sign"
                android:textSize="20sp"
                app:fontFamily="monospace"
                app:layout_constraintBottom_toBottomOf="@+id/bill_amount"
                app:layout_constraintEnd_toStartOf="@+id/bill_amount"
                app:layout_constraintTop_toTopOf="@+id/bill_amount" />

            <ImageButton
                android:id="@+id/tip_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tip_percent"
                app:layout_constraintEnd_toStartOf="@+id/tip_percent"
                app:layout_constraintTop_toTopOf="@+id/tip_percent"
                android:background="@null"
                app:srcCompat="@drawable/ic_baseline_remove_circle_24"
                android:contentDescription="@string/remove_people" />

            <ImageButton
                android:id="@+id/tip_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="@+id/tip_percent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tip_percent"
                app:srcCompat="@drawable/ic_baseline_add_circle_24"
                android:contentDescription="@string/increase_tip" />

            <ImageButton
                android:id="@+id/split_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/split"
                app:layout_constraintEnd_toStartOf="@+id/split"
                app:layout_constraintTop_toTopOf="@+id/split"
                android:background="@null"
                app:srcCompat="@drawable/ic_baseline_remove_circle_24"
                android:contentDescription="@string/decrease_tip" />

            <ImageButton
                android:id="@+id/split_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="@+id/split"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/split"
                app:srcCompat="@drawable/ic_baseline_add_circle_24"
                android:contentDescription="@string/add_people" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tip_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_dollars"
                android:textSize="22sp"
                app:fontFamily="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AppTheme.TextView"
                android:labelFor="@+id/tip_amount"
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount"

                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintBottom_toBottomOf="@+id/tip_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tip_amount" />

            <TextView
                android:id="@+id/bill_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/zero_dollars"
                android:textSize="24sp"
                app:fontFamily="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tip_amount" />

            <TextView
                style="@style/AppTheme.TextView"
                android:labelFor="@+id/bill_total"
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_total"

                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintBottom_toBottomOf="@+id/bill_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bill_total" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:drawableStart="@drawable/ic_baseline_arrow_upward_24"
                android:id="@+id/round_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/round_up"
                app:layout_constraintEnd_toStartOf="@+id/center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/round_down"
                android:drawableLeft="@drawable/ic_baseline_arrow_upward_24" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:drawableStart="@drawable/ic_baseline_arrow_downward_24"
                android:id="@+id/round_down"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/round_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center"
                app:layout_constraintTop_toBottomOf="@+id/bill_total"
                android:drawableLeft="@drawable/ic_baseline_arrow_downward_24" />

            <View
                android:id="@+id/center"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </View>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bill_total_split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_dollars"
                android:textSize="22sp"
                app:fontFamily="monospace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AppTheme.TextView"
                android:labelFor="@+id/bill_total_split"
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/each_person_pays"

                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintBottom_toBottomOf="@+id/bill_total_split"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bill_total_split" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>